Added Doggo and the Chicks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <h1>Woifey!</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <div>
+    <img id="doggoAndTheChicks" src="https://gifgifmagazine.com/uploads/gif/pas-i-kokoske.gif" alt="">
+    <p>  
+      Hey Woifey! <br>
+      This is what it looks like when doggo is being surrounded <br>
+      by all the chicks who just want to play with his <br>
+      <strong>dingeling</strong>!  
+    </p>
+  </div>
 </body>
  
 </html>
