Added styling and another gif

--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Woifey's Website</title>
+</head>
+
  
 <body>
-  <h1>Woifey!</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-  <div>
-    <img id="doggoAndTheChicks" src="https://gifgifmagazine.com/uploads/gif/pas-i-kokoske.gif" alt="">
-    <p>  
-      Hey Woifey! <br>
-      This is what it looks like when doggo is being surrounded <br>
-      by all the chicks who just want to play with his <br>
-      <strong>dingeling</strong>!  
+  <article id="introduction">
+    <h1>Woifey!</h1>
+    <p>Woifey, welcome to your very own website! Well, it is yours but doggo has absolute
+      autonomy over it... so it's also not yours. What a caffaffel! Don't get your pants
+      in a knick over that. 
     </p>
-  </div>
+    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  </article>  
+    
+  
+  <article id="doggoAndTheChicks">
+    <h3>Hey ho, Woifey-o!</h3>
+    <p>
+      Here are two absolute classics to make your day! It's supposed to look like virtual polaroids with gifs on them. Let me know how that comes out!
+    </p>
+    <section>
+      <div class="imgCapContainer">
+        <img src="https://i.pinimg.com/originals/0f/e7/ba/0fe7ba095b4f3c1779a3c8f35ad857d3.gif" alt="Young enderbear what he does best">
+        <figcaption>Even enderbear has made it to your website! Chapeau (Google it)!</figcaption>
+      </div>
+      <div class="imgCapContainer">
+        <img src="https://gifgifmagazine.com/uploads/gif/pas-i-kokoske.gif" alt="Doggo is having his dingeling played with by chicks">
+        <figcaption>This is what it looks like when doggo is being surrounded by all the chicks who just want to play with his <strong>dingeling</strong>!</figcaption>
+      </div>
+    </section>
+  </article>
+
+  
 </body>
  
 </html>
