--- a/index.html
+++ b/index.html
@@ -12,6 +12,53 @@
 
  
 <body>
+  <article id="d06102022">
+    <section class="articleIntro">
+      <div>
+        <h3>Woifey!</h3><br>
+        <p>You are getting closer to 29!</p>
+        <p>But don't worry, you are not going to ever reach doggo
+          because you're going to stop aging at 29. Right?
+        </p>
+        <br>
+        <p>So, instead of a card you are getting an article on your own
+          website woifey!
+          <br>
+          <ol>
+            <li>How modern is that? Saves paper and therefor
+              water and energy.</li>
+            <li>It can be designed any way I want!</li>
+            <li>Fuck the card industry and their designers!</li>
+            <li>Lists! You don't get that on a card...</li>
+            <li>You get gifs and videos!</li>
+          </ol>
+          <br>
+          So, I hope you like your VERY special birthday "card".
+          Just that you cannot really call it a card this was...
+          Anyway!
+          <br>
+          All the bestest!
+          <h3>Doggo</h3>
+        </p>
+        <section class="videoWithHeader">
+          <iframe 
+          width="700" 
+          height="350" 
+          src="https://www.youtube.com/embed/K4Ei6x1ofCk" 
+          title="Happy birthday - A cappella" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+          <caption>
+            Here is a "Happy Birthday Acapella" from someone
+            who looks like Doggo! Especially on the very left...!
+          </caption>
+      </section>
+    </div>
+    </section>
+
+
+  </article>
   <article id="colorsAndFonts">
     <section id="colorsIntro">
       <h3>Ahoy, Woifey-wife</h3>
